# AdventOfCode2020

./: .gitignore  CMakeLists.txt  main.cpp
Data/: Day5.txt
Days/: Day01Challenge1.cpp  Day01Challenge1.hpp  Day01Challenge2.cpp  Day01Challenge2.hpp  Day02Challenge1.cpp  Day02Challenge1.hpp  Day02Challenge2.cpp  Day02Challenge2.hpp  Day03Challenge1.cpp  Day03Challenge1.hpp  Day03Challenge2.cpp  Day03Challenge2.hpp  Day04Challenge1.cpp  Day04Challenge1.hpp  Day04Challenge2.cpp  Day04Challenge2.hpp  Day05Challenge1.cpp  Day05Challenge1.hpp  Day05Challenge2.cpp  Day05Challenge2.hpp  Day06Challenge1.cpp  Day06Challenge1.hpp  Day06Challenge2.cpp  Day06Challenge2.hpp  Day07Challenge1.cpp  Day07Challenge1.hpp  Day07Challenge2.cpp  Day07Challenge2.hpp  Day08Challenge1.cpp  Day08Challenge1.hpp  Day08Challenge2.cpp  Day08Challenge2.hpp  Day09Challenge1.cpp  Day09Challenge1.hpp  Day09Challenge2.cpp  Day09Challenge2.hpp  Day10Challenge1.cpp  Day10Challenge1.hpp  Day10Challenge2.cpp  Day10Challenge2.hpp  (+4 more)
